--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
 								<article>
 									<header>
 										
+										<h2><a href="https://github.com/VaughnRollin/PortfolioProjects/blob/main/Bike%20Dashboard.xlsx">Bike Sales Dashboard<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/VaughnRollin/PortfolioProjects/blob/main/Bike%20Dashboard.xlsx" class="image fit"><img src="images/bike.jpg" alt="" /></a>
+									<p>In this project I preformed the steps such as data cleanning and data validation to create a dahsboard to help highlight my fnidings all done in excel. Be sure to download The excel workbook to view the dashboard.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/VaughnRollin/PortfolioProjects/blob/main/Bike%20Dashboard.xlsx" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										
 										<h2><a href="https://github.com/VaughnRollin/PortfolioProjects/blob/main/PortfolioCovidProject.sql">Data Exploration in SQL<br />
 										</a></h2>
 									</header>
